
Package: R.matlab
=================

Version: 1.5.0 [2011-09-24]
o GENERALIZATION: Now readMat() utilizes base::memDecompress() to
  uncompress compressed data structures, unless running R v2.9.x or
  before, in case Rcompression::uncompress() is used, iff installed.
  Thanks Stephen Eglen at University of Cambridge for reminding me
  about memDecompress().


Version: 1.4.0 [2011-07-25]
o ROBUSTNESS: Added an example of verbose output to example(readMat).
o Added a namespace to the package, which will be more or less
  a requirement in the next major release of R.
o CLEANUP: Now all references to the Rcompression package is within
  the local uncompress() function of readMat().  This makes the code
  more modular making it easier to implement alternatives to
  Rcompression::uncompress().


Version: 1.3.7 [2011-02-01]
o ROBUSTNESS: Now using argument 'imaginary' (not 'imag') in calls
  to complex().


Version: 1.3.6 [2010-10-29]
o ROBUSTNESS: Now writeMat() gives an error if duplicated object
  names are used, e.g. writeMat(..., A=1, B=2, A=3).
o ROBUSTNESS: Now writeMat() gives an error, not a warning, if 
  there are non-named objects.
o BUG FIX: The test for non-named objects to writeMat() did not
  work correctly.  Thanks Claudia Beleites for the report.


Version: 1.3.5 [2010-10-28]
o DOCUMENTATION: Clarified in the help of writeMat() that it can
  only write 'uncompressed' MAT files.
o ROBUSTNESS: Although readMat() can read non-named objects, in
  Matlab it is only the 'load()' function call that can read it
  but not the plain 'load' call.  Because of this, writeMat() 
  will now give a warning if it detects non-named objects.  For
  instance, in writeMat("foo.mat", x=a, y) the object 'a' is 
  named (as "x") whereas 'y' is not.  To name the objects and 
  avoid the warning, use writeMat("foo.mat", x=a, y=y).  Thanks
  Claudia Beleites at University of Trieste for reporting on this.


Version: 1.3.4 [2010-10-26]